deploy/kustomize/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stocks-web
  labels:
    app.kubernetes.io/part-of: stocks-web
